syntax = "proto3";

package datastore;
option go_package = "github.com/dimitriosvasilas/modqp/protos/datastore";

import "utils.proto";

service DataStore {
  rpc SubscribeOps(SubRequest) returns (stream OpStream) {}
  rpc SubscribeStates(SubRequest) returns (stream StateStream) {}
  rpc GetSnapshot(SubRequest) returns (stream StateStream) {}
}

message SubRequest {
  int64 timestamp = 1;
}

message OpStream {
  string type = 1;
  utils.Object state = 2;
  utils.Operation operation = 3;
}

message StateStream {
  utils.Object object = 1;
}